src/resolver/snapshots/onoma__resolver__database_backed_resolver__tests__resolving_symbols_of_specific_type.snap
---
source: src/resolver/database_backed_resolver.rs
expression: resolved_symbols
---
[
  {
    "id": 0,
    "name": "#(* % 2)",
    "kind": "Function",
    "language": "Clojure",
    "path": "tests/fixtures/clojure.clj",
    "score": 1050,
    "start_line": 44,
    "end_line": 44,
    "start_column": 2,
    "end_column": 10
  },
  {
    "id": 0,
    "name": "#(+ % 1)",
    "kind": "Function",
    "language": "Clojure",
    "path": "tests/fixtures/clojure.clj",
    "score": 1050,
    "start_line": 43,
    "end_line": 43,
    "start_column": 2,
    "end_column": 10
  },
  {
    "id": 0,
    "name": "add",
    "kind": "Function",
    "language": "Clojure",
    "path": "tests/fixtures/clojure.clj",
    "score": 1050,
    "start_line": 19,
    "end_line": 19,
    "start_column": 7,
    "end_column": 10
  },
  {
    "id": 0,
    "name": "greet",
    "kind": "Function",
    "language": "Clojure",
    "path": "tests/fixtures/clojure.clj",
    "score": 1050,
    "start_line": 22,
    "end_line": 22,
    "start_column": 7,
    "end_column": 12
  },
  {
    "id": 0,
    "name": "Add",
    "kind": "Function",
    "language": "Go",
    "path": "tests/fixtures/go.go",
    "score": 1050,
    "start_line": 24,
    "end_line": 24,
    "start_column": 6,
    "end_column": 9
  },
  {
    "id": 0,
    "name": "Move",
    "kind": "Method",
    "language": "Go",
    "path": "tests/fixtures/go.go",
    "score": 1050,
    "start_line": 29,
    "end_line": 29,
    "start_column": 16,
    "end_column": 20
  },
  {
    "id": 0,
    "name": "Multiply",
    "kind": "Function",
    "language": "Go",
    "path": "tests/fixtures/go.go",
    "score": 1050,
    "start_line": 35,
    "end_line": 35,
    "start_column": 6,
    "end_column": 14
  },
  {
    "id": 0,
    "name": "add",
    "kind": "Function",
    "language": "Javascript",
    "path": "tests/fixtures/javascript.js",
    "score": 1050,
    "start_line": 34,
    "end_line": 34,
    "start_column": 10,
    "end_column": 13
  },
  {
    "id": 0,
    "name": "greet",
    "kind": "Function",
    "language": "Javascript",
    "path": "tests/fixtures/javascript.js",
    "score": 1050,
    "start_line": 59,
    "end_line": 59,
    "start_column": 10,
    "end_column": 15
  },
  {
    "id": 0,
    "name": "multiply",
    "kind": "Function",
    "language": "Javascript",
    "path": "tests/fixtures/javascript.js",
    "score": 1050,
    "start_line": 40,
    "end_line": 40,
    "start_column": 7,
    "end_column": 15
  },
  {
    "id": 0,
    "name": "sum",
    "kind": "Method",
    "language": "Javascript",
    "path": "tests/fixtures/javascript.js",
    "score": 1050,
    "start_line": 11,
    "end_line": 11,
    "start_column": 5,
    "end_column": 8
  },
  {
    "id": 0,
    "name": "ArrowFunctional",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1050,
    "start_line": 47,
    "end_line": 47,
    "start_column": 7,
    "end_column": 22
  },
  {
    "id": 0,
    "name": "FunctionalComponent",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1050,
    "start_line": 38,
    "end_line": 38,
    "start_column": 10,
    "end_column": 29
  },
  {
    "id": 0,
    "name": "arrowFunc",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1050,
    "start_line": 33,
    "end_line": 33,
    "start_column": 7,
    "end_column": 16
  },
  {
    "id": 0,
    "name": "methodExample",
    "kind": "Method",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1050,
    "start_line": 12,
    "end_line": 12,
    "start_column": 5,
    "end_column": 18
  },
  {
    "id": 0,
    "name": "regularFunction",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1050,
    "start_line": 29,
    "end_line": 29,
    "start_column": 10,
    "end_column": 25
  },
  {
    "id": 0,
    "name": "add",
    "kind": "Function",
    "language": "Lua",
    "path": "tests/fixtures/lua.lua",
    "score": 1050,
    "start_line": 8,
    "end_line": 8,
    "start_column": 10,
    "end_column": 13
  },
  {
    "id": 0,
    "name": "printName",
    "kind": "Method",
    "language": "Lua",
    "path": "tests/fixtures/lua.lua",
    "score": 1050,
    "start_line": 15,
    "end_line": 15,
    "start_column": 18,
    "end_column": 27
  },
  {
    "id": 0,
    "name": "subtract",
    "kind": "Function",
    "language": "Lua",
    "path": "tests/fixtures/lua.lua",
    "score": 1050,
    "start_line": 20,
    "end_line": 20,
    "start_column": 1,
    "end_column": 9
  },
  {
    "id": 0,
    "name": "async_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 49,
    "end_line": 49,
    "start_column": 11,
    "end_column": 25
  },
  {
    "id": 0,
    "name": "async_method",
    "kind": "Method",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 41,
    "end_line": 41,
    "start_column": 15,
    "end_column": 27
  },
  {
    "id": 0,
    "name": "decorated_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 23,
    "end_line": 23,
    "start_column": 5,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "decorator",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 19,
    "end_line": 19,
    "start_column": 5,
    "end_column": 14
  },
  {
    "id": 0,
    "name": "inner_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 61,
    "end_line": 61,
    "start_column": 9,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "outer_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 60,
    "end_line": 60,
    "start_column": 5,
    "end_column": 19
  },
  {
    "id": 0,
    "name": "regular_method",
    "kind": "Method",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 37,
    "end_line": 37,
    "start_column": 9,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "top_level_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1050,
    "start_line": 53,
    "end_line": 53,
    "start_column": 5,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "move_by",
    "kind": "Method",
    "language": "Rust",
    "path": "tests/fixtures/rust.rs",
    "score": 1050,
    "start_line": 50,
    "end_line": 50,
    "start_column": 12,
    "end_column": 19
  },
  {
    "id": 0,
    "name": "vars_example",
    "kind": "Function",
    "language": "Rust",
    "path": "tests/fixtures/rust.rs",
    "score": 1050,
    "start_line": 41,
    "end_line": 41,
    "start_column": 8,
    "end_column": 20
  },
  {
    "id": 0,
    "name": "genericFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 47,
    "end_line": 47,
    "start_column": 10,
    "end_column": 25
  },
  {
    "id": 0,
    "name": "myArrowFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 42,
    "end_line": 42,
    "start_column": 7,
    "end_column": 22
  },
  {
    "id": 0,
    "name": "myFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 41,
    "end_line": 41,
    "start_column": 10,
    "end_column": 20
  },
  {
    "id": 0,
    "name": "myGenericArrowFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 48,
    "end_line": 48,
    "start_column": 7,
    "end_column": 29
  },
  {
    "id": 0,
    "name": "myGetter",
    "kind": "Method",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 12,
    "end_line": 12,
    "start_column": 9,
    "end_column": 17
  },
  {
    "id": 0,
    "name": "myMethod",
    "kind": "Method",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 11,
    "end_line": 11,
    "start_column": 5,
    "end_column": 13
  },
  {
    "id": 0,
    "name": "mySetter",
    "kind": "Method",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1050,
    "start_line": 13,
    "end_line": 13,
    "start_column": 9,
    "end_column": 17
  },
  {
    "id": 0,
    "name": "App",
    "kind": "Function",
    "language": "TypeScriptJsx",
    "path": "tests/fixtures/typescript.tsx",
    "score": 1050,
    "start_line": 44,
    "end_line": 44,
    "start_column": 10,
    "end_column": 13
  },
  {
    "id": 0,
    "name": "Header",
    "kind": "Function",
    "language": "TypeScriptJsx",
    "path": "tests/fixtures/typescript.tsx",
    "score": 1050,
    "start_line": 54,
    "end_line": 54,
    "start_column": 10,
    "end_column": 16
  },
  {
    "id": 0,
    "name": "add",
    "kind": "Function",
    "language": "TypeScriptJsx",
    "path": "tests/fixtures/typescript.tsx",
    "score": 1050,
    "start_line": 32,
    "end_line": 32,
    "start_column": 10,
    "end_column": 13
  },
  {
    "id": 0,
    "name": "increment",
    "kind": "Method",
    "language": "TypeScriptJsx",
    "path": "tests/fixtures/typescript.tsx",
    "score": 1050,
    "start_line": 23,
    "end_line": 23,
    "start_column": 5,
    "end_column": 14
  },
  {
    "id": 0,
    "name": "multiply",
    "kind": "Function",
    "language": "TypeScriptJsx",
    "path": "tests/fixtures/typescript.tsx",
    "score": 1050,
    "start_line": 37,
    "end_line": 37,
    "start_column": 7,
    "end_column": 15
  }
]
