src/resolver/snapshots/onoma__resolver__database_backed_resolver__tests__resolving_symbols_with_query.snap
---
source: src/resolver/database_backed_resolver.rs
expression: resolved_symbols
---
[
  {
    "id": 0,
    "name": "ArrowFunctional",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1116,
    "start_line": 47,
    "end_line": 47,
    "start_column": 7,
    "end_column": 22
  },
  {
    "id": 0,
    "name": "FunctionalComponent",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1124,
    "start_line": 38,
    "end_line": 38,
    "start_column": 10,
    "end_column": 29
  },
  {
    "id": 0,
    "name": "SelfClosingComponent",
    "kind": "Value",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1014,
    "start_line": 91,
    "end_line": 91,
    "start_column": 22,
    "end_column": 42
  },
  {
    "id": 0,
    "name": "arrowFunc",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1116,
    "start_line": 33,
    "end_line": 33,
    "start_column": 7,
    "end_column": 16
  },
  {
    "id": 0,
    "name": "regularFunction",
    "kind": "Function",
    "language": "JavascriptJsx",
    "path": "tests/fixtures/javascript.jsx",
    "score": 1116,
    "start_line": 29,
    "end_line": 29,
    "start_column": 10,
    "end_column": 25
  },
  {
    "id": 0,
    "name": "async_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1118,
    "start_line": 49,
    "end_line": 49,
    "start_column": 11,
    "end_column": 25
  },
  {
    "id": 0,
    "name": "decorated_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1118,
    "start_line": 23,
    "end_line": 23,
    "start_column": 5,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "func",
    "kind": "Parameter",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1148,
    "start_line": 19,
    "end_line": 19,
    "start_column": 15,
    "end_column": 19
  },
  {
    "id": 0,
    "name": "inner_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1118,
    "start_line": 61,
    "end_line": 61,
    "start_column": 9,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "outer_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1118,
    "start_line": 60,
    "end_line": 60,
    "start_column": 5,
    "end_column": 19
  },
  {
    "id": 0,
    "name": "top_level_function",
    "kind": "Function",
    "language": "Python",
    "path": "tests/fixtures/python.py",
    "score": 1118,
    "start_line": 53,
    "end_line": 53,
    "start_column": 5,
    "end_column": 23
  },
  {
    "id": 0,
    "name": "genericFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1116,
    "start_line": 47,
    "end_line": 47,
    "start_column": 10,
    "end_column": 25
  },
  {
    "id": 0,
    "name": "myArrowFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1116,
    "start_line": 42,
    "end_line": 42,
    "start_column": 7,
    "end_column": 22
  },
  {
    "id": 0,
    "name": "myFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1116,
    "start_line": 41,
    "end_line": 41,
    "start_column": 10,
    "end_column": 20
  },
  {
    "id": 0,
    "name": "myGenericArrowFunction",
    "kind": "Function",
    "language": "TypeScript",
    "path": "tests/fixtures/typescript.ts",
    "score": 1116,
    "start_line": 48,
    "end_line": 48,
    "start_column": 7,
    "end_column": 29
  }
]
